--- a/AdvancedDisplay/AndroidManifest.xml
+++ b/AdvancedDisplay/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <application
         android:label="@string/app_name"
         android:theme="@style/Theme.SubSettingsBase">
-        <receiver android:name="org.lineageos.settings.device.BootCompletedReceiver">
+        <receiver
+            android:name="org.lineageos.settings.device.BootCompletedReceiver"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -17,7 +19,8 @@
 
         <activity
             android:name=".AdvancedDisplayActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
