Fix doze manifest - androidx startup duplication

--- a/doze/AndroidManifest.xml
+++ b/doze/AndroidManifest.xml
@@ -38,6 +38,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
+        <!-- jjeditstart-->
+        <provider xmlns:tools="http://schemas.android.com/tools"
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            tools:replace="android:authorities" />
+        <!-- jjeditend-->
     </application>
 </manifest>
